# warp-refined

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Important.md  skills-lock.json
.agents/skills/onboarding-verification-skill/: SKILL.md
.agents/skills/reproduce-bug-report-local/: SKILL.md
.github/: STAKEHOLDERS
.github/workflows/: create_release.yml
app/: Cargo.toml  build.rs
app/src/: app_menus.rs  app_state.rs  appearance.rs  changelog_model.rs  crash_recovery.rs  debounce.rs  debug_dump.rs  download_method.rs  dynamic_libraries.rs  features.rs  font_fallback.rs  global_resource_handles.rs  input_suggestions.rs  input_suggestions_tests.rs  keyboard.rs  keyboard_tests.rs  lib.rs  menu.rs  menu_tests.rs  modal.rs  projects.rs  referral_theme_status.rs  resource_limits.rs  reward_view.rs  root_view.rs  safe_triangle_tests.rs  search_bar.rs  session_management.rs  shell_indicator.rs  tab.rs  throttle.rs  vim_registers.rs  voltron.rs  warp_managed_paths_watcher.rs  wasm_nux_dialog.rs  window_settings.rs  word_block_editor.rs
app/src/ai/: active_agent_views_model.rs  agent_conversations_model.rs  agent_conversations_model_tests.rs  agent_tips.rs  ai_document_view.rs  mod.rs  (+18 more)
crates/command-signatures-v2/: build.rs
crates/integration/: build.rs
crates/warp_assets/: Cargo.toml
crates/warp_assets/src/: lib.rs
crates/warpui/: build.rs
script/: bootstrap  run
script/macos/: run
specs/APP-4549/: PRODUCT.md  TECH.md
specs/REMOTE-1374/: PRODUCT.md
specs/REMOTE-1453/: PRODUCT.md
specs/REMOTE-1696/: PRODUCT.md  TECH.md
specs/qr-code/: PRODUCT.md  TECH.md
(+2351 files in other folders)
